Update annotation source and add confidence to annotation (#91)
* Update annotation source and add confidence to annotation

* Update Annotation.annotationSource
