# server/openapi_server/dbmodels/annotation_source.py
@@ -1,8 +1,10 @@
-from mongoengine import StringField, EmbeddedDocument
+from mongoengine import EmbeddedDocument, EmbeddedDocumentField
+
+from openapi_server.dbmodels.resource_source import ResourceSource
 
 
 class AnnotationSource(EmbeddedDocument):
-    name = StringField(required=True)
+    resourceSource = EmbeddedDocumentField(ResourceSource)
 
     def to_dict(self):
         doc = self.to_mongo().to_dict()
