# server/openapi_server/dbmodels/resource_source.py
@@ -1,0 +1,9 @@
+from mongoengine import StringField, EmbeddedDocument
+
+
+class ResourceSource(EmbeddedDocument):
+    name = StringField(required=True)
+
+    def to_dict(self):
+        doc = self.to_mongo().to_dict()
+        return doc
