# server/openapi_server/dbmodels/text_date_annotation.py
@@ -1,4 +1,4 @@
-from mongoengine import IntField, StringField, EmbeddedDocument
+from mongoengine import FloatField, IntField, StringField, EmbeddedDocument
 
 
 class TextDateAnnotation(EmbeddedDocument):
@@ -6,6 +6,7 @@ class TextDateAnnotation(EmbeddedDocument):
     length = IntField(required=True)
     text = StringField()
     dateFormat = StringField()
+    confidence = FloatField()
 
     def to_dict(self):
         doc = self.to_mongo().to_dict()
