# server/openapi_server/dbmodels/text_person_name_annotation.py
@@ -1,10 +1,11 @@
-from mongoengine import IntField, StringField, EmbeddedDocument
+from mongoengine import FloatField, IntField, StringField, EmbeddedDocument
 
 
 class TextPersonNameAnnotation(EmbeddedDocument):
     start = IntField(required=True)
     length = IntField(required=True)
     text = StringField()
+    confidence = FloatField()
 
     def to_dict(self):
         doc = self.to_mongo().to_dict()
